Another fix of fixed background on Iphone

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -372,7 +372,7 @@ nav a {
     }
     .splash,
     .services{
-        background-size: 300%;
+        background-size: auto;
     }
     .box{
         width: 80%;
@@ -384,7 +384,7 @@ nav a {
 }
 /* Contact */
 .contact{
-    height: 85vh;
+    height: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -400,6 +400,7 @@ nav a {
 .contact-text{
     width: 40%;
     font-size: 1.5rem;
+    margin: 2rem 0;
 }
 .form button{
     width: 100px;
@@ -418,7 +419,7 @@ nav a {
 form{
     display: flex;
     flex-direction: column;
-    
+    margin: 1rem 0;
 }
 input,
 textarea{
@@ -451,7 +452,7 @@ textarea{
     flex-direction: column;
    }
    .contact-info{
-    height: 100%;
+    height: auto;
     min-width: 96%;
    }
    .contact-text{
